# sigwood

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  link-check.yml  release.yml
demo/: README.md  gen_corpus.py
docs/: FAQ.md  KNOWN-ISSUES.md  RELEASING.md  ROADMAP.md  SCHEMA.md
notebooks/: cloudflaws.ipynb
scripts/: validate_distribution.py
sigwood/: __init__.py  cli.py  cli_allowlist.py  cli_init.py  runner.py
sigwood/common/: allowlist.py  clustering.py  config.py  display.py  errors.py  finding.py  journal_probe.py  paths.py  sources.py  syslog_mode.py  tld.py
sigwood/common/loader/: __init__.py  diagnostics.py  discovery.py  journal.py  pipeline.py  sniff.py  types.py  windowing.py
sigwood/data/: config_example.toml
sigwood/data/allowlist/: hosts
sigwood/detectors/: aws.py  beacon.py  dns.py  duration.py  scan.py  syslog.py
sigwood/digest/: conn.py  dns.py  syslog.py
sigwood/exporters/: __init__.py  cloudtrail.py  splunk.py
sigwood/graph/: __init__.py  _core.py  conn.py  dns.py  pihole.py
sigwood/outputs/: _evidence.py  _render_model.py  graph.py  graph_player.html  html.py  json.py  pdf.py  text.py
sigwood/parsers/: cloudtrail.py  journal.py  syslog.py  zeek.py
tests/: conftest.py  test_allowlist_discovery.py  test_allowlist_matcher.py  test_allowlist_plan.py  test_allowlist_verb.py  test_architecture_spine.py  test_beacon_detector.py  test_bench.py  test_bench_batch.py  test_cli_help.py  test_cli_hunt.py  test_cli_multi_positional.py  test_cloudtrail_exporter.py  test_config_cli.py  test_config_example_drift.py  test_csv_output.py  test_demo_corpus.py  test_detector_import_failures.py  test_diag_syslog.py  test_digest_blob.py  test_digest_cli.py  test_digest_cloudtrail.py  test_digest_conn.py  test_digest_syslog.py  test_display.py  test_dns_detector.py  test_doc_links.py  test_graph_cli.py  test_graph_core.py  test_graph_errors.py  test_graph_pihole.py  test_graph_renderer.py  test_html_output.py  test_init_wizard.py  test_journal_loader.py  test_journal_output_security.py  test_journal_parser.py  test_journal_probe.py  test_journal_route.py  test_json_output.py  (+26 more)
tools/: bench_batch.py  bench_diff.py  bench_ledger.demo.toml  bench_summarize.py  diag_syslog.py  validate_doc_links.py
